--- a/VisualCrypt.Desktop/VisualCrypt.Desktop.csproj
+++ b/VisualCrypt.Desktop/VisualCrypt.Desktop.csproj
@@ -117,6 +117,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Features\FileModel.cs" />
+    <Compile Include="Features\SaveLogic.cs" />
     <Compile Include="Lib\InputlanguageHelper.cs" />
     <Compile Include="Commands\SetupCommand.cs" />
     <Compile Include="Features\FindReplace\SearchOptions.cs" />
