Remove directory-assembly-loading, improve tracking of IsDirty and add an icon to visualize it

--- a/VisualCrypt.Desktop.ModuleEditor/VisualCrypt.Desktop.ModuleEditor.csproj
+++ b/VisualCrypt.Desktop.ModuleEditor/VisualCrypt.Desktop.ModuleEditor.csproj
@@ -150,7 +150,7 @@
     <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
   </Target>
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetDir)VisualCrypt.Desktop.ModuleEditor.dll" "$(SolutionDir)VisualCrypt.Desktop\bin\$(ConfigurationName)\Modules\" /Y</PostBuildEvent>
+    <PostBuildEvent>REM xcopy "$(TargetDir)VisualCrypt.Desktop.ModuleEditor.dll" "$(SolutionDir)VisualCrypt.Desktop\bin\$(ConfigurationName)\Modules\" /Y</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
