--- a/VisualCrypt.Desktop.Shared/VisualCrypt.Desktop.Shared.csproj
+++ b/VisualCrypt.Desktop.Shared/VisualCrypt.Desktop.Shared.csproj
@@ -80,12 +80,14 @@
     <Compile Include="Events\EditorSendsText.cs" />
     <Compile Include="Events\EditorReceivesText.cs" />
     <Compile Include="Events\EditorSendsStatusBarInfo.cs" />
+    <Compile Include="Files\BindableFileInfo.cs" />
+    <Compile Include="Files\EmptyCleartextFileModel.cs" />
     <Compile Include="Files\FileModel.cs" />
-    <Compile Include="Files\FileState.cs" />
+    <Compile Include="Files\FileManager.cs" />
+    <Compile Include="Files\FileModelBase.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IEditor.cs" />
     <Compile Include="IModuleTracker.cs" />
-    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegionNames.cs" />
     <Compile Include="Services\IMessageBoxService.cs" />
@@ -95,7 +97,7 @@
     <Compile Include="Settings\Map.cs" />
     <Compile Include="App\Constants.cs" />
     <Compile Include="App\EditorSettings.cs" />
-    <Compile Include="App\AppState.cs" />
+    <Compile Include="App\SettingsManager.cs" />
     <Compile Include="App\Serializer.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="ValueConverters\BoolTextWrappingConverter.cs" />
