--- a/VisualCrypt.Desktop.ModuleEncryption/VisualCrypt.Desktop.ModuleEncryption.csproj
+++ b/VisualCrypt.Desktop.ModuleEncryption/VisualCrypt.Desktop.ModuleEncryption.csproj
@@ -71,6 +71,7 @@
   <ItemGroup>
     <Compile Include="EncryptedFileModel.cs" />
     <Compile Include="EncryptionService.cs" />
+    <Compile Include="KeyStore.cs" />
     <Compile Include="VisualCryptFileModel.cs" />
     <Compile Include="ModuleEncryption.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
