--- a/VisualCrypt.Desktop.Shared/VisualCrypt.Desktop.Shared.csproj
+++ b/VisualCrypt.Desktop.Shared/VisualCrypt.Desktop.Shared.csproj
@@ -88,7 +88,6 @@
     <Compile Include="Files\PasswordManager.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IEditor.cs" />
-    <Compile Include="IModuleTracker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegionNames.cs" />
     <Compile Include="Services\IEncryptionService.cs" />
@@ -101,6 +100,7 @@
     <Compile Include="App\EditorSettings.cs" />
     <Compile Include="App\SettingsManager.cs" />
     <Compile Include="App\Serializer.cs" />
+    <Compile Include="Settings\OnFirstRunTasks.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="ValueConverters\BoolTextWrappingConverter.cs" />
     <Compile Include="ValueConverters\BoolVisibilityConverter.cs" />
