--- a/VisualCrypt.Desktop.Shared/VisualCrypt.Desktop.Shared.csproj
+++ b/VisualCrypt.Desktop.Shared/VisualCrypt.Desktop.Shared.csproj
@@ -80,7 +80,7 @@
     <Compile Include="App\DialogDirection.cs" />
     <Compile Include="App\DialogFilters.cs" />
     <Compile Include="Commands\EditorCommands.cs" />
-    <Compile Include="Controls\AppWindow - Copy.cs" />
+    <Compile Include="Controls\AppWindow.cs" />
     <Compile Include="DelegateCommandExtensions.cs" />
     <Compile Include="Events\EditorShouldSendText.cs" />
     <Compile Include="Events\EditorSendsText.cs" />
@@ -93,36 +93,6 @@
     <Compile Include="Files\PasswordManager.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IEditor.cs" />
-    <Compile Include="Microsoft.Windows.Shell\Standard\ComGuids.cs" />
-    <Compile Include="Microsoft.Windows.Shell\Standard\Debug.cs" />
-    <Compile Include="Microsoft.Windows.Shell\Standard\DoubleUtil.cs" />
-    <Compile Include="Microsoft.Windows.Shell\Standard\DpiHelper.cs" />
-    <Compile Include="Microsoft.Windows.Shell\Standard\ErrorCodes.cs" />
-    <Compile Include="Microsoft.Windows.Shell\Standard\MessageWindow.cs" />
-    <Compile Include="Microsoft.Windows.Shell\Standard\NativeMethods.cs" />
-    <Compile Include="Microsoft.Windows.Shell\Standard\ShellProvider.cs" />
-    <Compile Include="Microsoft.Windows.Shell\Standard\StreamHelper.cs" />
-    <Compile Include="Microsoft.Windows.Shell\Standard\Utilities.cs" />
-    <Compile Include="Microsoft.Windows.Shell\Standard\Utilities.Windows.cs" />
-    <Compile Include="Microsoft.Windows.Shell\Standard\Utilities.Wpf.cs" />
-    <Compile Include="Microsoft.Windows.Shell\Standard\Verify.cs" />
-    <Compile Include="Microsoft.Windows.Shell\SystemCommands.cs" />
-    <Compile Include="Microsoft.Windows.Shell\SystemParameters2.cs" />
-    <Compile Include="Microsoft.Windows.Shell\WindowChrome.cs" />
-    <Compile Include="Microsoft.Windows.Shell\WindowChromeWorker.cs" />
-    <Compile Include="Native\ABEdge.cs" />
-    <Compile Include="Native\ABMsg.cs" />
-    <Compile Include="Native\APPBARDATA.cs" />
-    <Compile Include="Native\Constants.cs" />
-    <Compile Include="Native\CREATESTRUCT.cs" />
-    <Compile Include="Native\MARGINS.cs" />
-    <Compile Include="Native\MINMAXINFO.cs" />
-    <Compile Include="Native\MONITORINFO.cs" />
-    <Compile Include="Native\POINT.cs" />
-    <Compile Include="Native\RECT.cs" />
-    <Compile Include="Native\SafeLibraryHandle.cs" />
-    <Compile Include="Native\UnsafeNativeMethods.cs" />
-    <Compile Include="Native\WINDOWPLACEMENT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegionNames.cs" />
     <Compile Include="Services\IEncryptionService.cs" />
@@ -137,7 +107,6 @@
     <Compile Include="App\Serializer.cs" />
     <Compile Include="Settings\OnFirstRunTasks.cs" />
     <Compile Include="StringExtensions.cs" />
-    <Content Include="Controls\AppWindow.cs" />
     <Compile Include="ValueConverters\BoolTextWrappingConverter.cs" />
     <Compile Include="ValueConverters\BoolVisibilityConverter.cs" />
     <Compile Include="ValueConverters\ThicknessToDoubleConverter.cs" />
