--- a/VisualCrypt.Desktop.ModuleEditor/VisualCrypt.Desktop.ModuleEditor.csproj
+++ b/VisualCrypt.Desktop.ModuleEditor/VisualCrypt.Desktop.ModuleEditor.csproj
@@ -68,13 +68,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Features\FindReplace\SearchOptions.cs" />
-    <Compile Include="Features\FindReplace\SearchResult.cs" />
-    <Compile Include="Features\FindReplace\SearchStrategy.cs" />
-    <Compile Include="Features\Fonts\FontFamilyListItem.cs" />
-    <Compile Include="Features\Fonts\NameDictionaryHelper.cs" />
-    <Compile Include="Features\Fonts\TypefaceListItem.cs" />
-    <Compile Include="Features\Printing\Printer.cs" />
+    <Compile Include="FeatureSupport\FindReplace\SearchOptions.cs" />
+    <Compile Include="FeatureSupport\FindReplace\SearchResult.cs" />
+    <Compile Include="FeatureSupport\FindReplace\SearchStrategy.cs" />
+    <Compile Include="FeatureSupport\Fonts\FontFamilyListItem.cs" />
+    <Compile Include="FeatureSupport\Fonts\NameDictionaryHelper.cs" />
+    <Compile Include="FeatureSupport\Fonts\TypefaceListItem.cs" />
+    <Compile Include="FeatureSupport\Printing\Printer.cs" />
     <Compile Include="ModuleEditor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
