cleaner custom dialog

--- a/VisualCrypt.Desktop.ModuleEditor/VisualCrypt.Desktop.ModuleEditor.csproj
+++ b/VisualCrypt.Desktop.ModuleEditor/VisualCrypt.Desktop.ModuleEditor.csproj
@@ -26,7 +26,7 @@
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
