--- a/VisualCrypt.Desktop/VisualCrypt.Desktop.csproj
+++ b/VisualCrypt.Desktop/VisualCrypt.Desktop.csproj
@@ -83,6 +83,9 @@
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Images\logo_rounded_16-256.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Interop.Shell32">
       <HintPath>..\VisualCrypt.Desktop\obj\Debug\Interop.Shell32.dll</HintPath>
@@ -216,10 +219,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\VisualCrypt.ico" />
-    <Resource Include="Images\WindowIcon.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Images\save_16x4.png" />
   </ItemGroup>
   <ItemGroup>
@@ -232,6 +231,9 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\logo_rounded_16-256.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
