--- a/VisualCrypt.Desktop.Tests/VisualCrypt.Desktop.Tests.csproj
+++ b/VisualCrypt.Desktop.Tests/VisualCrypt.Desktop.Tests.csproj
@@ -90,6 +90,7 @@
     <Compile Include="FindReplaceTests.cs" />
     <Compile Include="FakeOkMessageBoxService.cs" />
     <Compile Include="MockEventAggregator.cs" />
+    <Compile Include="PasswordSanitization.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SHA256ManagedMonoTests.cs" />
     <Compile Include="SecureStringTests.cs" />
