Shrink null-checking

--- a/VisualCrypt.Cryptography.Portable/VisualCrypt.Cryptography.Portable.csproj
+++ b/VisualCrypt.Cryptography.Portable/VisualCrypt.Cryptography.Portable.csproj
@@ -56,6 +56,7 @@
     <Compile Include="VisualCrypt2\DataTypes\SecureBytes.cs" />
     <Compile Include="VisualCrypt2\DataTypes\PrunedPassword.cs" />
     <Compile Include="VisualCrypt2\Infrastructure\EncryptionProgress.cs" />
+    <Compile Include="VisualCrypt2\Infrastructure\Guard.cs" />
     <Compile Include="VisualCrypt2\Infrastructure\IEncryptionProgress.cs" />
     <Compile Include="VisualCrypt2\Infrastructure\LongRunningOperation.cs" />
     <Compile Include="VisualCrypt2\Infrastructure\LongRunningOperationContext.cs" />
